RESOLVED FIXED147748
SQLStatementBackend doesn't need to be refcounted
https://bugs.webkit.org/show_bug.cgi?id=147748
Summary SQLStatementBackend doesn't need to be refcounted
Anders Carlsson
Reported 2015-08-06 14:58:58 PDT
SQLStatementBackend doesn't need to be refcounted
Attachments
Patch (6.32 KB, patch)
2015-08-06 14:59 PDT, Anders Carlsson
ggaren: review+
Anders Carlsson
Comment 1 2015-08-06 14:59:47 PDT
Geoffrey Garen
Comment 2 2015-08-06 15:13:49 PDT
Comment on attachment 258403 [details] Patch r=me
Anders Carlsson
Comment 3 2015-08-06 15:32:29 PDT
Note You need to log in before you can comment on or make changes to this bug.