SQLStatementBackend doesn't need to be refcounted https://bugs.webkit.org/show_bug.cgi?id=147748

Reviewed by Geoffrey Garen.

There's no shared ownership of SQLStatementBackend so we can just use std::unique_ptr.

* Modules/webdatabase/SQLStatementBackend.cpp:
(WebCore::SQLStatementBackend::create): Deleted.
* Modules/webdatabase/SQLStatementBackend.h:
* Modules/webdatabase/SQLTransactionBackend.cpp:
(WebCore::SQLTransactionBackend::enqueueStatementBackend):
(WebCore::SQLTransactionBackend::executeSQL):
* Modules/webdatabase/SQLTransactionBackend.h:

Canonical link: https://commits.webkit.org/165835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188066 268f45cc-cd09-0410-ab3c-d52691b4dbfc